--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "javascript-time-ago": "^2.5.6",
     "vue": "^2.6.14",
+    "vue-infinite-loading": "^2.4.5",
     "vue2-filters": "^0.14.0"
   },
   "devDependencies": {
